--- a/templates/result.html
+++ b/templates/result.html
@@ -11,17 +11,40 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <style>
+            @page {
+                    size: a4 portrait;
+                    margin: 40pt;
+                    @frame header_frame { /* Static Frame */
+                    -pdf-frame-content: header_content;
+                    left: 50pt; width: 512pt; top: 50pt; height: 40pt;
+                    }
+                    @frame content_frame { /* Content Frame */
+                    left: 50pt; width: 512pt; top: 90pt; height: 632pt;
+                    }
+                    @frame footer_frame { /* Another static Frame */
+                    -pdf-frame-content: footer_content;
+                    left: 50pt; width: 512pt; top: 772pt; height: 20pt;
+                    }
+                  }
+                  td{
+                   text-align: center; 
+                   vertical-align: middle; 
+                  }
 
+            </style>
+        
     </head>
     <body>
-        <table class="table table-bordered">
-            <tr> 
+
+        <table name='invoice' style='border:1px solid black; border-spacing: 15px;'class="table table-bordered">
+            <tr > 
                 <th> Invoice Number: </th>
-                <td colspan=3>001</td>
+                <td colspan=3>{{i}}</td>
             </tr>
             <tr>
                 <th> Invoice Date: </th>
-                <td>20/6/2021</td>
+                <td>{{da}}</td>
             </tr>
             <tr>
                 <th colspan=2> Seller</th>
@@ -68,5 +91,7 @@
                 <td>{{q1}}*{{a1}}+{{q2}}*{{a2}}</td>
             </tr>
         </table>
+
+        
     </body>
 </html>
