--- a/templates/index.html
+++ b/templates/index.html
@@ -12,15 +12,31 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <style>
+          h4,form{
+            align-content: center;
+            padding-left: 600px;
+            padding-top: 50px;
+            padding-bottom: 50px;
+            position: relative;
+          }
+          form{
+            border-style:solid;
+            border-width: 50px;
+          }
+        </style>
     </head>
     <body>
-        <h1>Invoice Generator</h1>
-        <table>
-        <form action="{% url 'result' %}" method="post">
-          {% csrf_token %}
-          {{form}}
-          <input class="btn btn-primary" type="submit" value="Submit" />
-        </form>
+
+        <h4>Invoice Generator</h4>
+        
+            <form action="{% url 'result' %}" method="post">
+              <table>
+              {% csrf_token %}
+              {{form}}
+              </table>
+              <input style='align-content: center;'class="btn btn-primary" type="submit" value="Download Invoice">
+            </form>
         </table>
     </body>
 </html>
